<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Easy Inventory</string>

    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all product data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Title text for the empty view, which describes the empty store image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">The store is empty &#8230;</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>

    <!-- Title for the activity to edit an existing pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>

    <!-- Toast message in editor when current product was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_successful">Product updated</string>

    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_failed">Error with updating product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting pet</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Name</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_price">Price</string>

    <!-- Text hint for supplier field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_supplier">Name of supplier</string>

    <!-- Text hint for phone field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_phone">Phone number</string>

    <!-- Sale button text in list item layout [CHAR LIMIT=30] -->
    <string name="sale">sale</string>

    <!-- Text for price -->
    <string name="price">Price: %1$d</string>

    <!-- Text for currency in list -->
    <string name="euro_currency_sign">€</string>

    <!-- Text for quantity in list -->
    <string name="quantity">Quantity: %1$d</string>

    <!-- Show empty field in detail -->
    <string name="empty">Empty</string>

    <!-- Text for product name in detail -->
    <string name="detail_name">Product Name</string>

    <!-- Text for product price in detail -->
    <string name="detail_price">Price</string>

    <!-- Text for product quantity in detail -->
    <string name="detail_quantity">Quantity</string>

    <!-- Text for product supplier name in detail -->
    <string name="detail_supplier_name">Supplier Name</string>

    <!-- Text for product supplier phone in detail -->
    <string name="detail_supplier_phone">Supplier Phone</string>

    <!-- Text for call supplier button in detail -->
    <string name="call_supplier">Call Supplier</string>

    <!-- Text for edit item in menu -->
    <string name="edit_item">Edit Item</string>

    <!-- Text for delete item in menu -->
    <string name="delete_item">Delete item</string>

    <!--Text to be shown to check out price-->
    <string name="check_out_price">Kindly check out price</string>

    <!--Text for the toast message product is sold out. -->
    <string name="sold_out">Hey! This product is sold out!</string>

    <!--Toast messages requesting user to fill in fields in editor-->
    <string name="toast_message_all_fields_empty">Hey all fields are empty! Fill in the blanks.</string>

    <string name="toast_message_missing_product_name">Fill in the name of the product.</string>

    <string name="toast_message_missing_product_price">Fill in the price of the product.</string>

    <string name="toast_message_missing_supplier_name">Fill in the name of the supplier.</string>

    <string name="toast_message_missing_supplier_phone">Fill in the phone number.</string>

    <!-- Label for category in the editor [CHAR LIMIT=30] -->
    <string name="category_title">Category</string>

    <!-- Label for dropdown menu option category books [CHAR LIMIT=20] -->
    <string name="category_book">Book</string>

    <!-- Label for dropdown menu option category stationary [CHAR LIMIT=20] -->
    <string name="category_stationary">Stationary</string>

    <!-- Label for dropdown menu option category cards [CHAR LIMIT=20] -->
    <string name="category_card">Greeting cards</string>

    <!-- Label for dropdown menu option category unknown [CHAR LIMIT=20] -->
    <string name="category_unknown">Unknown</string>

    <!-- Text for default quantity [CHAR LIMIT=20] -->
    <string name="default_quantity">0</string>

    <!-- Text for plus button [CHAR LIMIT=20] -->
    <string name="plus_button">+</string>

    <!-- Text for default quantity [CHAR LIMIT=20] -->
    <string name="minus_button">-</string>

    <!-- Text for dummy data [CHAR LIMIT=20] -->
    <string name="shakespeare">Shakespeare</string>
    <string name="shakespeare_price">20</string>
    <string name="shakespeare_quantity">12</string>
    <string name="shakespeare_supplier">Shakespeare supplier</string>
    <string name="shakespeare_phone">0156649874</string>
</resources>
