<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ PROJECT LICENSE
  ~
  ~ This project was submitted by Sabrina Palis as part of the Android Basics Nanodegree by Google At Udacity.
  ~
  ~ As part of Udacity Honor code, your submissions must be your own work, hence
  ~ submitting this project as yours will cause you to break the Udacity Honor Code
  ~ and the suspension of your account.
  ~
  ~ Me, the author of the project, allow you to check the code as a reference, but if
  ~ you submit it, it is your own responsibility if you get expelled.
  ~
  ~ Copyright (c) 2018 Sabrina Palis.
  ~
  ~ Besides the above notice, the following license applies and this license notice
  ~ must be included in all works derived from this project.
  ~
  ~ MIT License
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="com.example.android.myinventoryappv9.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin">

        <TextView
            style="@style/ItemDetailStyle"
            android:text="@string/detail_name" />

        <EditText
            android:id="@+id/detail_name"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_product_name" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/ItemDetailStyle"
            android:text="@string/category_title" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/ItemDetailStyle"
            android:text="@string/detail_price" />

        <EditText
            android:id="@+id/detail_price"
            style="@style/EditorFieldStyle"
            android:layout_width="wrap_content"
            android:hint="@string/hint_product_price"
            android:inputType="numberDecimal"
            android:maxLength="4"/>

        <TextView
            android:id="@+id/detail_currency"
            style="@style/ProductDetailStyle"
            android:layout_width="wrap_content"
            android:text="@string/euro_currency_sign" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/ItemDetailStyle"
            android:text="@string/detail_quantity" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <Button
                android:id="@+id/sales_minus_button"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:background="@drawable/button_background"
                android:text="@string/minus_button"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/detail_quantity"
                style="@style/ProductDetailStyle"
                android:gravity="center"
                android:hint="@string/default_quantity"
                android:maxLength="4"/>

            <Button
                android:id="@+id/sales_plus_button"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:background="@drawable/button_background"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/plus_button"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/ItemDetailStyle"
            android:text="@string/detail_supplier_name" />

        <EditText
            android:id="@+id/detail_supplier_name"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_product_supplier" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/ItemDetailStyle"
            android:text="@string/detail_supplier_phone" />

        <EditText
            android:id="@+id/detail_supplier_phone"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_product_phone"
            android:maxLength="10"
            android:inputType="phone"/>
    </LinearLayout>

    <Button
        android:id="@+id/call_supplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_margin"
        android:background="@drawable/button_background"
        android:padding="20dp"
        android:text="@string/call_supplier"
        android:textColor="@android:color/white" />

</LinearLayout>